src/test/deca/codegen/valid/test_method_decl2.deca
// Description:
//    Programme testant simplement la déclaration et l'instanciation d'une classe
//	  Etape(s) : A, B et C
// 	  Lexicalement : OUI
//	  Syntaxiquement : OUI
//	  Contextuellement : OUI
//
// Resultats:
//    3 3
//
// Historique:
//    cree le 20/01/2021

class A  {
	int x;

    void test(){
        int i=3;
	    A a = new A();

	    println(i);
        println(a.return3());
    }

    int return3(){
        return 3;
    }
}

{
	A a = new A();
    a.test();
}